fix behavior for collapse cell

--- a/packages/mondrian/mondrian.less
+++ b/packages/mondrian/mondrian.less
@@ -18,6 +18,10 @@
 		border: 1px solid green;
 }
 
+.cell-content {
+		height: 100%;
+}
+
 .root-cell {
 		height: 100%;
 		width: 100%;
